--- a/index.html
+++ b/index.html
@@ -5,24 +5,42 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Accessdash</title>
 
+    <link rel="stylesheet" href="styles.css">
+    <script src="frd.js" defer></script>
+
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Bad+Script&family=Castoro+Titling&family=Chivo:ital,wght@0,100..900;1,100..900&family=Cinzel+Decorative:wght@400;700;900&family=Didact+Gothic&family=Martian+Mono:wght@100..800&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="accessdatchimg.jpg" alt="accessdatch logo">
+
+        <div class="hamburger-class">
+            <div class="hamburger" onclick="body.classList.toggle('hamburger-open')">
+              <span style="background-color: #0257ff;"></span>
+              <span style="background-color: #0257ff;"></span>
+              <span style="background-color: #0257ff;"></span>
+              <span style="background-color: #0257ff;"></span>
+              <span style="background-color: #0257ff;"></span>
+              <span style="background-color: #0257ff;"></span>   
+            </div>
+           </div>
+
         <nav>
-            <a href="">Dashboard</a>
+            <div>
                 <ul>
+            <a href="" class="dashboard">Dashboard</a>
                     <li>Dashboard</li>
                     <li>Info</li>
                     <li>Voortgang</li>
                     <li>Scan</li>
                 </ul>
-            <a href="">Nieuwekijk</a>
+            </div>
+            <div>
                 <ul>
+            <a href="" class="nieuwekijk">Nieuwekijk</a>
                     <li>Home</li>
                     <li>Over ons</li>
                     <li>Contact</li>
@@ -30,6 +48,7 @@
                     <li>Blog</li>
                     <li>Blog-detail</li>
                 </ul>
+            </div>
         </nav>
     </header>
 
