volledige HTML pag 1 #2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
     <header>
-        <img src="accessdatchimg.jpg" alt="accessdatch logo">
+        <img src="ADlogo.jpg" alt="accessdatch logo">
+        <a href="" class="ad-logo">AccessDash</a>
 
         <div class="hamburger-class">
             <div class="hamburger" onclick="body.classList.toggle('hamburger-open')">
@@ -60,28 +61,28 @@
                 <h1>New Future Lab</h1>
                 <a href="https://www.newfuturelab.nl/">newfuturelab.nl</a>
                 <p>ontoegankelijk</p>
-                <span></span>
+                <span>57%</span>
             </div>
             <div>
                 <img src="SoCimg.jpg" alt="Shot of Culture logo">
                 <h1>Shot of Culture</h1>
                 <a href="https://shotofculture.nl/">shotofculture.nl</a>
                 <p>nieuwe fouten ontdekt</p>
-                <span></span>
+                <span>57%</span>
             </div>
             <div>
                 <img src="NieuwekijkImg.jpg" alt="Nieuwekijk logo">
                 <h1>Nieuwekijk</h1>
                 <a href="https://nieuwekijk.nl/">nieuwekijk.nl</a>
                 <p>nieuwe fouten ontdekt</p>
-                <span></span>
+                <span>100%</span>
             </div>
             <div>
                 <img src="TheBinImg.png" alt="The Bin logo">
                 <h1>The Bin</h1>
                 <a href="https://www.thebin.nl/">thebin.nl</a>
                 <p>toegankelijk</p>
-                <span></span>
+                <span>100%</span>
             </div>
         </section>
 </body>
