--- a/index.html
+++ b/index.html
@@ -56,56 +56,116 @@
         <h2>Dashboard</h2>
         <h1 id="dashboardtitle">Nieuwekijk</h1>
         <section>
-            <div>
-                <img src="NFLimg.jpg" alt="New Future Lab logo">
-                <h1>New Future Lab</h1>
-                <a href="https://www.newfuturelab.nl/">newfuturelab.nl</a>
-                <p>ontoegankelijk</p>
-                <fieldset>
-                    <p>
-                        <label for="meter">Meter</label>
-                        <meter min="10" max="100" low="30" high="80" value="57"></meter>
-                    </p>
-                </fieldset>
-            </div>
-            <div>
-                <img src="SoCimg.jpg" alt="Shot of Culture logo">
-                <h1>Shot of Culture</h1>
-                <a href="https://shotofculture.nl/">shotofculture.nl</a>
-                <p>nieuwe fouten ontdekt</p>
-                <form action="">
-                    <fieldset>
-                        <p>
-                            <label for="meter">Meter</label>
-                            <meter min="10" max="100" low="30" high="80" value="57"></meter>
-                        </p>
-                    </fieldset>
-                </form>
-            </div>
-            <div>
-                <img src="NieuwekijkImg.jpg" alt="Nieuwekijk logo">
-                <h1>Nieuwekijk</h1>
-                <a href="https://nieuwekijk.nl/">nieuwekijk.nl</a>
-                <p>nieuwe fouten ontdekt</p>
-                <fieldset>
-                    <p>
-                        <label for="meter">Meter</label>
-                        <meter min="10" max="100" low="30" high="80" value="100"></meter>
-                    </p>
-                </fieldset>
-            </div>
-            <div>
-                <img src="TheBinImg.png" alt="The Bin logo">
-                <h1>The Bin</h1>
-                <a href="https://www.thebin.nl/">thebin.nl</a>
-                <p>toegankelijk</p>
-                <fieldset>
-                    <p>
-                        <label for="meter">Meter</label>
-                        <meter min="10" max="100" low="30" high="80" value="100"></meter>
-                    </p>
-                </fieldset>
-            </div>
+            <article class="dashNFL">
+
+                <div class="NFLtop">
+                    <img style="width: 60px;" src="NFLimg.jpg" alt="New Future Lab logo">
+                    <h1 id="NFL">New Future Lab</h1>
+                </div>
+
+                <div class="NFLbottom">
+                        <div>
+                            <a href="https://www.newfuturelab.nl/">newfuturelab.nl</a>
+                        <div>
+                            <p>ontoegankelijk</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <fieldset class="progressbar">
+                            <p>
+                                <meter min="10" max="100" low="30" high="80" value="57"></meter>
+                            </p>
+                        </fieldset>
+                    </div>
+                </div>
+
+            </article>
+
+            <article class="dashSoC">
+
+                <div class="SoCtop">
+                    <img style="width: 60px;" src="SoCimg.jpg" alt="Shot of Culture logo">
+                    <h1 id="SoC">Shot of Culture</h1>
+                </div>
+
+                <div class="SoCbottom">
+                    <div>
+                        <a href="https://shotofculture.nl/">shotofculture.nl</a>
+                        <div>
+                            <p>nieuwe fouten ontdekt</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <fieldset class="progressbar">
+                            <p>
+                                <meter min="10" max="100" low="30" high="80" value="57"></meter>
+                            </p>
+                        </fieldset>
+                    </div>
+
+                </div>
+
+            </article>
+
+            <article class="dashNK">
+                <div class="NKtop">
+                    <img style="width: 60px;" src="NieuwekijkImg.jpg" alt="Nieuwekijk logo">
+                    <h1 id="NK">Nieuwekijk</h1>
+                </div>
+                
+                <div class="NKbottom">
+                    <div>
+                        <a href="https://nieuwekijk.nl/">nieuwekijk.nl</a>
+                        <div>
+                            <p>nieuwe fouten ontdekt</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <fieldset class="progressbar">
+                            <p>                        
+                                <meter min="10" max="100" low="30" high="80" value="100"></meter>
+                            </p>
+                        </fieldset>
+                    </div>
+                </div>
+            </article>
+
+            <article class="dashTB">
+                <div class="TBtop">
+                    <img style="width: 60px;" src="TheBinImg.png" alt="The Bin logo">
+                    <h1 id="TB">The Bin</h1>
+                </div>
+                
+                <div class="TBbottom">
+                    <div>
+                        <a href="https://www.thebin.nl/">thebin.nl</a>
+                        <div>
+                            <p>toegankelijk</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <fieldset class="progressbar">
+                            <p>                        
+                                <meter min="10" max="100" low="30" high="80" value="100"></meter>
+                            </p>
+                        </fieldset>
+                    </div>
+                </div>
+            </article>
         </section>
+        <footer>
+            <ul class="footer-links">
+                <li class="footer-text">
+                    instellingen
+                </li>
+                <li class="footer-text">
+                    account
+                </li>
+            </ul>
+        </footer>
 </body>
 </html>
