--- a/nieuwekijk.html
+++ b/nieuwekijk.html
@@ -6,7 +6,7 @@
     <title>Accessdash</title>
 
     <link rel="stylesheet" href="nieuwekijk.css">
-    <script src="nieuwekijk.js" defer></script>
+    <script src="frd.js" defer></script>
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,25 +59,27 @@
         <h2>Dashboard</h2>
         <h1>Nieuwekijk</h1>
 
-        <article class="article">
-            <h2 id="toegankelijkheid">Toegankelijkheid</h2>
-            <div class="article-bottom">
-                <meter id="article-meter" min="0" max="100" value="70"></meter>
-                <ul id="niveau-list">
-                    <li class="list"> <img src="check.svg" alt="Check">Niveau A</li>
-                    <li class="list"> <img src="check.svg" alt="Check">Niveau AA</li>
-                    <li class="list"> <img src="check.svg" alt="Check">Niveau AAA</li>
-                </ul>
-            </div>
-        </article>
-        <article class="article2">
-            <h2 id="autoscan">Automatische scan</h2>
-            <p id="latest-scan">Laatste scan: 23/1/2025</p>
-            <div class="article2-bottom">
-                <meter id="article2-meter" min="0" max="100" value="54"></meter>
-                <a href="">Details</a>
-            </div>
-        </article>
+        <section class="articles-top">
+            <article class="article">
+                <h2 id="toegankelijkheid">Toegankelijkheid</h2>
+                <div class="article-bottom">
+                    <meter id="article-meter" min="0" max="100" value="70"></meter>
+                    <ul id="niveau-list">
+                        <li class="list"> <img src="check.svg" alt="Check">Niveau A</li>
+                        <li class="list"> <img src="check.svg" alt="Check">Niveau AA</li>
+                        <li class="list"> <img src="check.svg" alt="Check">Niveau AAA</li>
+                    </ul>
+                </div>
+            </article>
+            <article class="article2">
+                <h2 id="autoscan">Automatische scan</h2>
+                <p id="latest-scan">Laatste scan: 23/1/2025</p>
+                <div class="article2-bottom">
+                    <meter id="article2-meter" min="0" max="100" value="54"></meter>
+                    <a href="">Details</a>
+                </div>
+            </article>
+        </section>
 
         <div class="zoekbalk">
             <button class="zoekbutton">
@@ -86,6 +88,8 @@
             <input class="zoekbalk-input" style="border: none;" type="search" placeholder="Zoeken...">   
         </div>
 
+
+    <section class="articles">
         <article class="article-over-ons">
             <div class="article-OO-top">
                 <h2 class="h2-over-ons">over-ons</h2>
@@ -447,6 +451,7 @@
                 </ul>
             </div>
         </article>
+    </section>
     </main>
 
     <footer>
