--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 </div>
                 <div style="width: fit-content;">
                     <fieldset class="progressbar">
+                        <div class="procent">
                         <p>
                             <meter id="ontoegankelijk-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
                         </p>
