--- a/nieuwekijk.html
+++ b/nieuwekijk.html
@@ -63,7 +63,7 @@
             <article class="article">
                 <h2 id="toegankelijkheid">Toegankelijkheid</h2>
                 <div class="article-bottom">
-                    <meter id="article-meter" min="0" max="100" value="70"></meter>
+                    <meter id="ontoegankelijk-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
                     <ul id="niveau-list">
                         <li class="list"> <img src="check.svg" alt="Check">Niveau A</li>
                         <li class="list"> <img src="check.svg" alt="Check">Niveau AA</li>
@@ -74,19 +74,45 @@
             <article class="article2">
                 <h2 id="autoscan">Automatische scan</h2>
                 <p id="latest-scan">Laatste scan: 23/1/2025</p>
+
+                
+
                 <div class="article2-bottom">
-                    <meter id="article2-meter" min="0" max="100" value="54"></meter>
+                    <meter id="ontoegankelijk-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
+
+                    
                     <a href="">Details</a>
                 </div>
             </article>
         </section>
 
-        <div class="zoekbalk">
-            <button class="zoekbutton">
-                <img style="display: flex;" src="search.svg" alt="vergrootglas">
-            </button>
-            <input class="zoekbalk-input" style="border: none;" type="search" placeholder="Zoeken...">   
-        </div>
+        <section class="zoek-en-filters">
+                <div class="zoekbalk">
+                    <button class="zoekbutton">
+                        <img style="display: flex;" src="search.svg" alt="vergrootglas">
+                    </button>
+                    <input class="zoekbalk-input" style="border: none;" type="search" placeholder="Zoeken...">   
+                </div>
+                <div class="voldoet-niet">
+                    <p>voldoet niet (14)</p>
+                </div>
+                <div class="voldoet">
+                    <p>voldoet (6)</p>
+                </div>
+                <div class="div-a">
+                    <p>A (25)</p>
+                </div>
+                <div class="div-a">
+                    <p>AA (13)</p>
+                </div>
+                <div class="div-a">
+                    <p>AAA (12)</p>
+                </div>
+                <div class="pagina-plus">
+                    <img src="plusje-wit.svg" alt="wit plusje">
+                    <p>pagina toevoegen</p>
+                </div>
+        </section>
 
 
     <section class="articles">
@@ -97,7 +123,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -113,7 +139,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -130,7 +156,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -146,7 +172,7 @@
             </div>
             <a class="home-link" href="https://nieuwekijk.nl/">nieuwekijk.nl/home</a>
             <div class="meter-div">
-                <meter class="home-meter" min="0" max="100" value="70"></meter>
+                <meter class="home-meter" min="10" max="100" value="100" style="--value: 100; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="home-niveau">
                 <ul style="    
@@ -166,7 +192,7 @@
             </div>
             <a class="home-link" href="https://nieuwekijk.nl/">nieuwekijk.nl/home</a>
             <div class="meter-div">
-                <meter class="home-meter" min="0" max="100" value="70"></meter>
+                <meter class="home-meter" min="10" max="100" value="100" style="--value: 100; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="home-niveau">
                 <ul style="    padding: 8px 24px 16px 24px;
@@ -185,7 +211,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -201,7 +227,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -217,7 +243,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -233,7 +259,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -249,7 +275,7 @@
             </div>
             <a class="home-link" href="https://nieuwekijk.nl/">nieuwekijk.nl/home</a>
             <div class="meter-div">
-                <meter class="home-meter" min="0" max="100" value="70"></meter>
+                <meter class="home-meter" min="10" max="100" value="100" style="--value: 100; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="home-niveau">
                 <ul style="    padding: 8px 24px 16px 24px;
@@ -268,7 +294,7 @@
             </div>
             <a class="home-link" href="https://nieuwekijk.nl/">nieuwekijk.nl/home</a>
             <div class="meter-div">
-                <meter class="home-meter" min="0" max="100" value="70"></meter>
+                <meter class="home-meter" min="10" max="100" value="100" style="--value: 100; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="home-niveau">
                 <ul style="    padding: 8px 24px 16px 24px;
@@ -287,7 +313,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -303,7 +329,7 @@
             </div>
             <a class="home-link" href="https://nieuwekijk.nl/">nieuwekijk.nl/home</a>
             <div class="meter-div">
-                <meter class="home-meter" min="0" max="100" value="70"></meter>
+                <meter class="home-meter" min="10" max="100" value="100" style="--value: 100; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="home-niveau">
                 <ul style="    padding: 8px 24px 16px 24px;
@@ -322,7 +348,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -338,7 +364,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -354,7 +380,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -370,7 +396,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -386,7 +412,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -402,7 +428,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -418,7 +444,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
@@ -434,7 +460,7 @@
             </div>
             <a class="over-ons-link" href="https://nieuwekijk.nl/over-ons/">nieuwekijk.nl/over-ons</a>
             <div class="meter-div">
-                <meter class="over-ons-meter" min="0" max="100" value="70"></meter>
+                <meter class="over-ons-meter" min="10" max="100" value="57" style="--value: 57; --breedte: 300px; --dikte-rand: 1em;"></meter>
             </div>
             <div class="over-ons-niveau">
                 <ul style="padding: 8px 24px 16px 24px;">
